fix(sbb-map-container): add scrollbar background and divider line (#2316)

--- a/src/components/map-container/map-container.scss
+++ b/src/components/map-container/map-container.scss
@@ -68,7 +68,7 @@
 }
 
 .sbb-map-container__sidebar {
-  @include sbb.scrollbar;
+  @include sbb.scrollbar($size: thick, $track-visible: true);
 
   grid-column: 1 / 3;
   grid-row: 2 / 3;
@@ -87,6 +87,7 @@
     grid-row: 1 / 3;
     border-radius: 0;
     margin-block-start: 0;
+    border-block-start: var(--sbb-border-width-1x) solid var(--sbb-color-cloud-default);
   }
 }
 
